Amazon-EKS-Deployment/7_App_Deployment/nginx/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world-pod
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/lib/nginx/data
              name: nginx
      volumes:
        - name: nginx
          persistentVolumeClaim:
            claimName: nginx-pvc
