Amazon-EKS-Deployment/7_App_Deployment/nginx/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: 
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: nginx.2waveyyy.com
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.2waveyyy.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world-service
              port:
                number: 80
